syntax = "proto3";
package proio.proto;
option go_package = "github.com/decibelcooper/proio/go-proio/proto";
option java_package = "proio";
option java_outer_classname = "Proto";

// Warning: do not change any fields without understanding how the changes
// affect the proio libraries.  Any field may be added without affecting the
// libraries.

message EventHeader {
    uint64 runNumber = 1;
    uint64 eventNumber = 2;
    uint64 timeStamp = 3;

    uint32 nUniqueCollIDs = 4;
    message CollectionHeader {
        string name = 1;
        string entryType = 2;
        uint32 id = 3;
        uint32 payloadSize = 4;
    }
    repeated CollectionHeader payloadCollections = 5;

    map<string, bytes> auxData = 6;
}

message CollectionProto {
    uint32 nUniqueEntryIDs = 1;
    map<uint32, bytes> entries = 2;

    map<string, bytes> auxData = 3;
}
